[gd_scene load_steps=96 format=3 uid="uid://dkm5v6nxm4j6m"]

[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽.gd" id="1_1pse0"]
[ext_resource type="Shader" uid="uid://dpblmta1unm0n" path="res://Assets/主游戏/哥布林受击.tres" id="1_gehog"]
[ext_resource type="Texture2D" uid="uid://b2hb4bxpex3pc" path="res://Assets/下城区/战斗场景/邪帽/邪教boss-Sheet.png" id="1_jgt6x"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽state_machine.gd" id="3_vv8oe"]
[ext_resource type="Texture2D" uid="uid://com33m1b5khjl" path="res://Assets/下城区/战斗场景/邪帽/邪教组织4-Sheet.png" id="4_dbwvd"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽idle.gd" id="4_oigtf"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽appear.gd" id="5_umpyg"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽disappear.gd" id="6_8xh53"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽prominence.gd" id="7_q6pvr"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽skill_start.gd" id="8_e2tas"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽skill_end.gd" id="9_ukgfo"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/skill邪帽.gd" id="10_nds4x"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽sprint_attack.gd" id="11_ag0kv"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽underground_fire.gd" id="14_l7mu5"]
[ext_resource type="Script" path="res://Assets/下城区/战斗场景/邪帽/邪帽death.gd" id="15_46qxf"]
[ext_resource type="PackedScene" uid="uid://b2rnw78ku4o2e" path="res://Assets/下城区/战斗场景/邪帽/技能汲取特效.tscn" id="16_otbtk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uk2f2"]
shader = ExtResource("1_gehog")
shader_parameter/Enabled = false
shader_parameter/Tint = Color(0.87, 0.6438, 0.7192, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkuow"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lg7t"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4uol"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0xxk"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf8if"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gftd"]
atlas = ExtResource("4_dbwvd")
region = Rect2(2800, 1050, 1400, 350)

[sub_resource type="AtlasTexture" id="AtlasTexture_tndi6"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_rarqm"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lfsa"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_12yjl"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_gct6b"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhybc"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_admvn"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb4ms"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e5ur"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_n61hs"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_lquye"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe66m"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_lstne"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xdk"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_481l0"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eq7o"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 2800, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y4ht"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 2800, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwe2j"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 2800, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5sp0"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_n58lb"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfxk2"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1mgk"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qjkr"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_hip0a"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_iati6"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd26s"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_iulf0"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqim8"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl3tq"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ce41"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpxen"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_nccf2"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_okbtm"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpy32"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcwo5"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvh2q"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmprl"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_wemvl"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3d53"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 0, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1eix"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_j037s"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gtib"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kkb4"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn2aj"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_855st"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rbpa"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_60o8f"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_72xob"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3lq8"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltu15"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_tma7e"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2qf7"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2pg1"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_n67ha"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss3jq"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxvav"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkbma"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_y226c"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltnoe"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2100, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb108"]
atlas = ExtResource("1_jgt6x")
region = Rect2(2800, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1e7y"]
atlas = ExtResource("1_jgt6x")
region = Rect2(3500, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcjvn"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4200, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lmhx"]
atlas = ExtResource("1_jgt6x")
region = Rect2(4900, 2100, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgrjy"]
atlas = ExtResource("1_jgt6x")
region = Rect2(0, 2800, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_w65bu"]
atlas = ExtResource("1_jgt6x")
region = Rect2(700, 2800, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sh5i"]
atlas = ExtResource("1_jgt6x")
region = Rect2(1400, 2800, 700, 700)

[sub_resource type="SpriteFrames" id="SpriteFrames_bytjw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkuow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lg7t")
}],
"loop": false,
"name": &"Appear",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4uol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0xxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf8if")
}],
"loop": false,
"name": &"Disappear",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gftd")
}],
"loop": true,
"name": &"GroundFire",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tndi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rarqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lfsa")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_12yjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gct6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhybc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_admvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb4ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e5ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n61hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lquye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe66m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lstne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_481l0")
}],
"loop": false,
"name": &"Prominence",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eq7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y4ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwe2j")
}],
"loop": false,
"name": &"SkillEnd",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5sp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n58lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfxk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1mgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qjkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hip0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iati6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd26s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iulf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqim8")
}],
"loop": true,
"name": &"SkillLoop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl3tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ce41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpxen")
}],
"loop": false,
"name": &"SkillStart",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nccf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okbtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpy32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcwo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvh2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmprl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wemvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3d53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1eix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j037s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gtib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kkb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn2aj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_855st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rbpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60o8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72xob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3lq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltu15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tma7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2qf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2pg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n67ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss3jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxvav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkbma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y226c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltnoe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb108")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1e7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcjvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lmhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgrjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w65bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sh5i")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jaw6h"]
size = Vector2(168, 248)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lc11k"]
size = Vector2(4737, 5331)

[sub_resource type="Animation" id="Animation_aqkn5"]
resource_name = "HitFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_15jx2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cx86o"]
_data = {
"HitFlash": SubResource("Animation_aqkn5"),
"RESET": SubResource("Animation_15jx2")
}

[node name="邪帽" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_1pse0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_uk2f2")
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_bytjw")
animation = &"SkillLoop"
frame_progress = 0.337054
offset = Vector2(1.5, -76)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -124)
shape = SubResource("RectangleShape2D_jaw6h")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_vv8oe")

[node name="Idle(0)" type="Node" parent="StateMachine"]
script = ExtResource("4_oigtf")

[node name="Timer" type="Timer" parent="StateMachine/Idle(0)"]
one_shot = true

[node name="Appear(1)" type="Node" parent="StateMachine"]
script = ExtResource("5_umpyg")

[node name="Disappear(2)" type="Node" parent="StateMachine"]
script = ExtResource("6_8xh53")

[node name="Prominence(3)" type="Node" parent="StateMachine"]
script = ExtResource("7_q6pvr")

[node name="SkillStart(4)" type="Node" parent="StateMachine"]
script = ExtResource("8_e2tas")

[node name="SkillEnd(5)" type="Node" parent="StateMachine"]
script = ExtResource("9_ukgfo")

[node name="Skill(6)" type="Node" parent="StateMachine"]
script = ExtResource("10_nds4x")

[node name="Timer" type="Timer" parent="StateMachine/Skill(6)"]
one_shot = true

[node name="ChangerTimer" type="Timer" parent="StateMachine/Skill(6)"]
one_shot = true

[node name="SprintAttack(7)" type="Node" parent="StateMachine"]
script = ExtResource("11_ag0kv")

[node name="Timer" type="Timer" parent="StateMachine/SprintAttack(7)"]
one_shot = true

[node name="Death(8)" type="Node" parent="StateMachine"]
script = ExtResource("15_46qxf")

[node name="UndergroundFire(9)" type="Node" parent="StateMachine"]
script = ExtResource("14_l7mu5")

[node name="Timer" type="Timer" parent="StateMachine/UndergroundFire(9)"]
one_shot = true

[node name="End" type="Timer" parent="StateMachine/UndergroundFire(9)"]
one_shot = true

[node name="ArrowTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
shape = SubResource("RectangleShape2D_lc11k")
debug_color = Color(1, 1, 1, 0.12549)

[node name="SummonPoint" type="Node2D" parent="."]

[node name="HitEffectPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_cx86o")
}

[node name="技能汲取特效" parent="." instance=ExtResource("16_otbtk")]
position = Vector2(0, -185)

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Appear(1)" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Disappear(2)" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Prominence(3)" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/SkillStart(4)" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/SkillEnd(5)" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Death(8)" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="StateMachine/Idle(0)/Timer" to="StateMachine/Idle(0)" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Skill(6)/Timer" to="StateMachine/Skill(6)" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/Skill(6)/ChangerTimer" to="StateMachine/Skill(6)" method="_on_changer_timer_timeout"]
[connection signal="timeout" from="StateMachine/SprintAttack(7)/Timer" to="StateMachine/SprintAttack(7)" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/UndergroundFire(9)/Timer" to="StateMachine/UndergroundFire(9)" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/UndergroundFire(9)/End" to="StateMachine/UndergroundFire(9)" method="_on_end_timeout"]
[connection signal="timeout" from="ArrowTimer" to="." method="_on_arrow_timer_timeout"]
